# 2-oji-uzduotis

./: CMakeLists.txt  Doxyfile  README.md  funkcijos.cpp  funkcijos.h  kietiakai.txt  kursiokai.txt  main  main.cpp  programa_O1  rezultatai.txt  studentai1000.txt  studentai10000.txt  studentas.cpp  studentas.h  tempCodeRunnerFile.cpp  v.pradine  v.pradine.cpp  v.pradine2  v.pradine2.cpp  vargsiukai.txt
docs_output/doxygen_html/: _timer_8h.html  _timer_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  class_studentas.js  class_timer-members.html  class_timer.html  class_timer.js  class_zmogus-members.html  class_zmogus.html  class_zmogus.js  classes.html  doxygen_crawl.html  failu_8generavimas_8cpp.html  failu_8generavimas_8cpp.js  files.html  files_dup.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  funkcijos_8cpp.html  funkcijos_8cpp.js  funkcijos_8h.html  funkcijos_8h.js  funkcijos_8h_source.html  globals.html  globals_func.html  hierarchy.html  index.html  kietiakai_8txt.html  main_8cpp.html  menudata.js  navtreedata.js  navtreeindex0.js  rezultatai_8txt.html  studentai10000000_8txt.html  studentai1000000_8txt.html  studentai100000_8txt.html  (+10 more)
docs_output/doxygen_html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  files_0.js  files_3.js  files_4.js  files_6.js  functions_1.js  functions_2.js  (+12 more)
src/: calculator.cpp  calculator.h  main.cpp  studentas.cpp
tests/: calculator_test.cpp  test_studentas.cpp
